[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.17", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.9", features = ["js"] } 
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]